--- a/Diagnosis.App/Controls/Card/Course.xaml
+++ b/Diagnosis.App/Controls/Card/Course.xaml
@@ -4,46 +4,49 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300" 
-             Focusable="True" 
+             d:DesignHeight="300" d:DesignWidth="300"
+             Focusable="True"
              IsTabStop="True">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="30" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Expander Grid.RowSpan="2"
-                  IsExpanded="{Binding IsAppointmentsVisible}" 
-                  Focusable="False"/>
+                  IsExpanded="{Binding IsAppointmentsVisible}"
+                  Focusable="False" />
         <StackPanel Grid.Column="1">
-            <TextBlock Text="{Binding Name}"/>
+            <TextBlock Text="{Binding Name}" />
             <TextBlock>
-                <TextBlock Text="{Binding Start, StringFormat='{}с {0:d}'}"/>
-                <TextBlock Text="{Binding End, StringFormat='{}по {0:d}'}" Visibility="{Binding IsEnded, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                <TextBlock Text="{Binding Start, StringFormat='{}с {0:d}'}" />
+                <TextBlock Text="{Binding End, StringFormat='{}по {0:d}'}" Visibility="{Binding IsEnded, Converter={StaticResource BooleanToVisibilityConverter}}" />
             </TextBlock>
-            <TextBlock Text="{Binding LeadDoctor.ShortName}"/>
-            <Button Command="{Binding AddAppointmentCommand}">Добавить осмотр</Button>
+            <TextBlock Text="{Binding LeadDoctor.ShortName}" />
         </StackPanel>
+
+        <StackPanel Grid.Column="1" 
+                    Grid.Row="1" 
+                    Visibility="{Binding IsAppointmentsVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <TextBlock>Осмотры</TextBlock>
+            
         <ListView x:Name="appointments"
                   ItemsSource="{Binding Appointments}"
                   SelectedItem="{Binding SelectedAppointment}"
-                  Visibility="{Binding IsAppointmentsVisible, Converter={StaticResource BooleanToVisibilityConverter}}" 
-                  Grid.Column="1" 
-                  Grid.Row="1">
+                  MaxHeight="200">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
                         <DockPanel>
-                            <TextBlock Text="{Binding DateTime, StringFormat='{}{0:d}'}"/>
+                            <TextBlock Text="{Binding DateTime, StringFormat='{}{0:d}'}" />
                             <TextBlock Text="{Binding Doctor.ShortName}"
-                                       HorizontalAlignment="Right"/>
+                                       HorizontalAlignment="Right" />
                         </DockPanel>
-                        <ItemsControl 
-                                      ItemsSource="{Binding HealthRecords}">
+                        <ItemsControl ItemsSource="{Binding HealthRecords}">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
                                     <TextBlock Text="{Binding Name}" />
@@ -54,5 +57,10 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        </StackPanel>
+
+        <Button Grid.Column="1" 
+                Grid.Row="2" 
+                Command="{Binding AddAppointmentCommand}">Добавить осмотр</Button>
     </Grid>
 </UserControl>
