--- a/Diagnosis.App/Controls/Card/HealthRecord.xaml
+++ b/Diagnosis.App/Controls/Card/HealthRecord.xaml
@@ -6,6 +6,7 @@
              xmlns:constols="clr-namespace:Diagnosis.App.Controls"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300" 
+             MinHeight="50"
              Focusable="True" 
              IsTabStop="True">
     <Grid>
