--- a/Diagnosis.App/Controls/Card/Course.xaml
+++ b/Diagnosis.App/Controls/Card/Course.xaml
@@ -4,9 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300"
-             Focusable="True"
-             IsTabStop="True">
+             d:DesignHeight="300" d:DesignWidth="300">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../../Styles/Expander.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -18,6 +23,7 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Expander Grid.RowSpan="2"
+                  Style="{StaticResource ExpanderStyleFixed}"
                   IsExpanded="{Binding IsAppointmentsVisible}"
                   Focusable="False" />
         <StackPanel Grid.Column="1">
@@ -40,7 +46,7 @@
                   MaxHeight="200">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel>
+                        <StackPanel MaxWidth="150">
                             <DockPanel>
                                 <TextBlock Text="{Binding DateTime, StringFormat='{}{0:d}'}" />
                                 <TextBlock Text="{Binding Doctor.ShortName}"
