--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -8,6 +8,7 @@
     <Application.Resources>
         <conv:IHierarchicalCheckableToBackground x:Key="IHierarchicalCheckableToBackground" />
         <conv:NegBooleanToVisibilityConverter x:Key="NegBooleanToVisibilityConverter" />
+        <conv:NegateConverter x:Key="NegateBoolean" />
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 
         <Style TargetType="TextBlock" x:Key="ScreenTitle">
