--- a/Diagnosis.App/Controls/Card/Course.xaml
+++ b/Diagnosis.App/Controls/Card/Course.xaml
@@ -27,7 +27,7 @@
                   IsExpanded="{Binding IsAppointmentsVisible}"
                   Focusable="False" />
         <StackPanel Grid.Column="1">
-            <TextBlock Text="{Binding Name}" />
+            <TextBlock Text="Курс" />
             <TextBlock>
                 <TextBlock Text="{Binding Start, StringFormat='{}с {0:d}'}" />
                 <TextBlock Text="{Binding End, StringFormat='{}по {0:d}', TargetNullValue=''}" />
